--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
-  height: 100vh;
+  height: 100%;
   background-color: #F5F5F6;
+  min-height: 100vh;
 }
 
 .App-header {
